[gd_scene load_steps=10 format=3 uid="uid://rt6ihis2qrb7"]

[ext_resource type="Script" path="res://MainScene/MainScene.gd" id="1_gibei"]
[ext_resource type="PackedScene" uid="uid://r8tmygx0axyv" path="res://Player/Player.tscn" id="2_h85fu"]
[ext_resource type="Texture2D" uid="uid://cmgot07kcdule" path="res://paper3_5.png" id="2_l42je"]
[ext_resource type="Texture2D" uid="uid://dmolmhhvh5orl" path="res://MainScene/game_over.png" id="4_bti8q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hwuna"]
size = Vector2(4516, 2968)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7nif2"]
size = Vector2(1200, 5701)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8swoo"]
size = Vector2(1322.5, 6486)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qsa5y"]
size = Vector2(10424.2, 877)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5ovec"]
size = Vector2(10444.2, 1091)

[node name="MainScene" type="Node2D"]
script = ExtResource("1_gibei")
metadata/_edit_vertical_guides_ = [-486.0, 70.0, 4589.0]
metadata/_edit_horizontal_guides_ = [-1792.0, 1182.0]

[node name="Background" type="TextureRect" parent="."]
texture_repeat = 2
offset_left = -4057.0
offset_top = -3992.0
offset_right = 7633.0
offset_bottom = 3927.0
texture = ExtResource("2_l42je")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("2_h85fu")]
position = Vector2(556, 201)

[node name="SpawnTimer" type="Timer" parent="."]
process_callback = 0
autostart = true

[node name="GameOverBanner" type="Sprite2D" parent="."]
visible = false
scale = Vector2(2, 2)
texture = ExtResource("4_bti8q")

[node name="PlayerSpawnPoint" type="Marker2D" parent="."]
position = Vector2(754, 195)

[node name="PlayableArea" type="Area2D" parent="."]
position = Vector2(-321, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayableArea"]
position = Vector2(2329, -306)
shape = SubResource("RectangleShape2D_hwuna")
disabled = true
debug_color = Color(0, 0.6, 0.701961, 0.0431373)

[node name="AsteroidKillArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AsteroidKillArea"]
position = Vector2(-3191, -96)
shape = SubResource("RectangleShape2D_7nif2")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AsteroidKillArea"]
position = Vector2(6853, 303)
shape = SubResource("RectangleShape2D_8swoo")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="AsteroidKillArea"]
position = Vector2(2123.88, -3324)
shape = SubResource("RectangleShape2D_qsa5y")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="AsteroidKillArea"]
position = Vector2(1484.12, 3265)
shape = SubResource("RectangleShape2D_5ovec")

[connection signal="body_entered" from="AsteroidKillArea" to="." method="_on_asteroid_kill_area_body_entered"]
